tests/ui/issues/issue-29861.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-29861.rs:11:6
   |
LL | impl<'a, T: 'a> MakeRef2 for T {
   |      ^^ unconstrained lifetime parameter
   |
help: Either remove the type parameter ''a' or make use of it, for example ` for S<'a>`.
   |
LL - impl<'a, T: 'a> MakeRef2 for T {
LL + impl<, T: 'a> MakeRef2 for T {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
